# wordcube

./: .dockerignore  .gitignore  BUILD  DEPLOYMENT.md  Dockerfile  WORKSPACE  bazel-bin  bazel-codespaces-blank  bazel-out  bazel-testlogs  build-and-run.sh  dev-setup.sh  docker-compose.yml  go.mod  go.sum
cli/: BUILD  main.go
game/: BUILD  game.go  game_test.go
server/: buf.gen.yaml  go.mod  go.sum
server/app/: server.go
server/cli/: main.go
server/game/: game.go  game_test.go
server/parallel/: parallel.go  parallel_test.go
server/proto/v1/: checkpoint.proto
server/psolve/: psolve.go  psolve_test.go  search.go
server/psolve/testdata/: 5_letter.textproto
server/reader/: reader.go
server/scratch/: game_state.txt
server/solver/: solver.go  solver_test.go
server/solver/test_graphs/: Memoization_full.gv
server/trie/: trie.go  trie_test.go
site/: .env.development  .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
site/src/: App.tsx  index.css
site/src/components/: GameCell.tsx  GameGrid.tsx  SolutionsSidebar.tsx
site/src/components/ui/: word-square.tsx
site/src/hooks/: useGameState.ts  useSolutions.ts
site/src/types/: api.ts  game.ts
solver/: BUILD.bazel  solver.go  solver_test.go
solver/test_graphs/: LoopTerminates_full.gv  MultipleReturns_full.gv  OneNode_full.gv  Unreachable_full.gv
src/games/wordcube/: BUILD  game.go  game_test.go  solver.go
trie/: BUILD.bazel  trie.go  trie_test.go
