load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "solver",
    srcs = ["solver.go"],
    importpath = "github.com/danielkhasanov/wordcube/solver",
    visibility = ["//visibility:public"],
)

go_test(
    name = "solver_test",
    srcs = ["solver_test.go"],
    deps = [
        ":solver",
        "@com_github_dominikbraun_graph//:go_default_library",
        "@com_github_dominikbraun_graph//draw:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
    ],
)
