load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "trie",
    srcs = ["trie.go"],
    importpath = "github.com/danielkhasanov/wordcube/trie",
    visibility = ["//visibility:public"],
)

go_test(
    name = "trie_test",
    srcs = ["trie_test.go"],
    deps = [
        ":trie",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
    ],
)
